Fixed scrollbar issues

--- a/ichat.react/src/simplebar.css
+++ b/ichat.react/src/simplebar.css
@@ -5,10 +5,6 @@
     justify-content: flex-start;
     align-content: flex-start;
     align-items: flex-start;
-    width: inherit;
-    height: inherit;
-    max-width: inherit;
-    max-height: inherit;
 }
 
 .simplebar-wrapper {
@@ -48,7 +44,7 @@
     -webkit-overflow-scrolling: touch;
 }
 
-.simplebar-content {
+.simplebar-content-wrapper {
     direction: inherit;
     box-sizing: border-box !important;
     position: relative;
@@ -56,9 +52,15 @@
     height: 100%; /* Required for horizontal native scrollbar to not appear if parent is taller than natural height */
     width: auto;
     visibility: visible;
-    overflow: scroll; /* Scroll on this element otherwise element can't have a padding applied properly */
+    overflow: auto; /* Scroll on this element otherwise element can't have a padding applied properly */
     max-width: 100%; /* Not required for horizontal scroll to trigger */
     max-height: 100%; /* Needed for vertical scroll to trigger */
+}
+
+.simplebar-content:before,
+.simplebar-content:after {
+    content: " ";
+    display: table;
 }
 
 .simplebar-placeholder {
@@ -108,6 +110,7 @@
     right: 0;
     bottom: 0;
     pointer-events: none;
+    overflow: hidden;
 }
 
 [data-simplebar].simplebar-dragging .simplebar-track {
